# dripgrep

./: .gitignore  Cargo.toml  LICENSE  README.md  example.txt  test.py
dripgrep/: Cargo.toml
dripgrep-lib/: Cargo.toml  build.rs
dripgrep-lib/src/: lib.rs
dripgrep-lib/src/cli/: args.rs  cli_entry.rs  command_funcs.rs  commands.rs  logging.rs  mod.rs
dripgrep/src/: main.rs
embedding/: function_embeddings.txt
testing/: testing_01.txt  testing_02.txt  testing_03.txt
